hphp/hack/test/typecheck/ambiguous_declaration_concrete.php.exp
File "ambiguous_declaration_concrete.php", line 6, characters 19-21:
T2 and T1 both declare ambiguous implementations of foo. (Typing[4285])
File "ambiguous_declaration_concrete.php", line 6, characters 19-21:
T2's definition is here.
File "ambiguous_declaration_concrete.php", line 3, characters 19-21:
T1's definition is here.
File "ambiguous_declaration_concrete.php", line 6, characters 19-21:
Redeclare foo in C with a compatible signature.
